# nanollm-sanic-inference-server

./: .gitignore  Makefile  README.md  echo_server.py  echo_with_tokenizer_server.py  llama_cpp_server.py  mirror_server.py  mock_server.py  nanollm_server.py  nanollm_server_test_mocking.py  pyproject.toml  requirements.txt  test-cuda.py
config/: .env  models_params.json  models_params_jetson-container.json
data/: message_from_smolagent.json  messages_from_smolagent.json  mock_responses.json
docker/: Dockerfile  build_arm_docker.sh  run-bash.sh  run-mlc-server.sh  run-server-gemma-2.sh  run-server-gemma-3.sh  run-server.sh
docker/build-mlc_llm/: config.cmake
scripts/: mlc_llm-compile.sh  mlc_llm-compile_with_local_mlc-llm.sh
src/: __init__.py  constants.py  logger.py  model_adapter.py  model_port_echo.py  model_port_echo_with_tokenizer.py  model_port_llama_cpp.py  model_port_mirror.py  model_port_mock.py  nanollm_server.py  openai_services.py  openai_v1_blueprint.py  sanic_server.py
src/adapters/: model_adapter.py
src/apps/: echo_server.py  echo_with_tokenizer_server.py  hello-world.py  llama_cpp_server.py  mock_server.py  sanic_app.py
src/params/: model_info_type.py  models_classes.py
src/ports/: model_port_echo.py  model_port_echo_with_tokenizer.py  model_port_llama_cpp.py  model_port_mlc.py  model_port_mock.py  model_port_nanollm.py  model_port_transformers.py  models_port_generator.py
src/sanic_blueprints/: embeddings_v1_blueprint.py  (+2 more)
tests/: test-cuda-llama-cpp.py  test-cuda.py  test-mlc.py  test-nanollm-agent.py  test-nanollm.py
(+13 files in other folders)
